@@ -29,7 +29,6 @@
 @property (nonatomic, strong) NSArray *transientPasteboardTypes;
 @property (nonatomic, strong) NSArray *sensitivePasteboardTypes;
 @property NSPasteboard *jcPasteboard;
-@property unsigned int pbBlockCount;
 @property unsigned int pbCount;
 @property SRKeyCodeTransformer *shortcutTransformer;
 @property signed int stackPosition;
@@ -72,7 +71,6 @@
     self.jcPasteboard = [NSPasteboard generalPasteboard];
     self.isBezelDisplayed = NO;
     self.isBezelPinned = NO;
-    self.pbBlockCount = 0;
     self.pbCount = 0;
 
     self.shortcutTransformer = [[[SRKeyCodeTransformer alloc] init] retain];
@@ -98,8 +96,7 @@
                             @"com.typeit4me.clipping",
                             @"Pasteboard generator type",
                             @"org.nspasteboard.TransientType",
-                            @"org.nspasteboard.AutoGeneratedType",
-                            @"org.nspasteboard.source"
+                            @"org.nspasteboard.AutoGeneratedType"
                             ];
     self.sensitivePasteboardTypes = @[
                                       @"PasswordPboardType",
@@ -489,11 +486,11 @@ NSString* keyCodeToString(CGKeyCode keyCode) {
     pbTypes = [NSArray arrayWithObjects:@"NSStringPboardType",NULL];
 
     [self.jcPasteboard declareTypes:pbTypes owner:NULL];
-
     [self.jcPasteboard setString:pbFullText forType:@"NSStringPboardType"];
-    if (! moveBool) {
-        self.pbBlockCount = (int)[self.jcPasteboard changeCount];
-    }
+    [self.jcPasteboard setString:@"1" forType:@"net.sf.jumpcut.internal"];
+    // We do not track the original source of the clipping, so we cannot report it here.
+    [self.jcPasteboard setString:@"" forType:@"org.nspasteboard.source"];
+
     return true;
 }
 
@@ -649,20 +646,30 @@ NSString* keyCodeToString(CGKeyCode keyCode) {
 
 -(void)pollPasteboard:(NSTimer *)timer
 {
-    NSString *type = [self.jcPasteboard availableTypeFromArray:[NSArray arrayWithObject:NSStringPboardType]];
+    // Short-circuit our tests without examining the string or the pasteboard at all, if it doesn't seem like there's been an update.
     if ( self.pbCount != [self.jcPasteboard changeCount] ) {
         // Reload pbCount with the current changeCount
         // Probably poor coding technique, but pollPB should be the only thing messing with pbCount, so it should be okay
         self.pbCount = (int)[self.jcPasteboard changeCount];
+        // Is the top item on the pasteboard a string?
+        NSString *type = [self.jcPasteboard availableTypeFromArray:[NSArray arrayWithObject:NSStringPboardType]];
         if ( type != nil ) {
-            BOOL transient = NO;
-            BOOL sensitive = NO;
+            // We have a number of possible cases where we don't want to record the clipping.
+            // 1. The clipping is nil.
+            // 2. It's *transient*, indicating that it's a macro expansion from an application like TextExpander.
+            // 3. It's *sensitive*, indicating that it came from a password manager. Note that this check may be overridden.
+            // 4. The clippping is already the first item on the stack. (For instance, it was saved, then Jumpcut was quit and relaunched, or another application has updated the pasteboard to remove a transient change, or the user simply copied twice.)
+            // 5. The clipping came from Jumpcut but is *not* the first item in the stack. (For instance, it was selected from the menu dropdown and not moved to the top.)
+            // TODO: We should also provide a mechanism for excluding selected applications.
+            NSString *contents = [self.jcPasteboard stringForType:type];
+            if (contents == nil) {
+                return;
+            }
             NSUInteger transientCount = [self.transientPasteboardTypes count];
             for (NSUInteger i = 0; i < transientCount; i++) {
                 NSString *typeName = [self.transientPasteboardTypes objectAtIndex:i];
                 if ([self.jcPasteboard stringForType:typeName]) {
-                    transient = YES;
-                    break;
+                    return;
                 }
             }
             NSUInteger sensitiveCount = [self.sensitivePasteboardTypes count];
@@ -670,32 +677,30 @@ NSString* keyCodeToString(CGKeyCode keyCode) {
                 for (NSUInteger i = 0; i < sensitiveCount; i++) {
                     NSString *typeName = [self.sensitivePasteboardTypes objectAtIndex:i];
                     if ([self.jcPasteboard stringForType:typeName]) {
-                        sensitive = YES;
-                        break;
+                        return;
                     }
                 }
             }
-            // TODO: We should also provide a mechanism for excluding selected applications.
-            NSString *contents = [self.jcPasteboard stringForType:type];
-            if (contents != nil && !transient && !sensitive) {
-                if (( [self.clippingStore jcListCount] == 0 || ! [contents isEqualToString:[self.clippingStore clippingContentsAtPosition:0]])
-                    && self.pbCount != self.pbBlockCount ) {
-                    [self.clippingStore addClipping:contents
-                                             ofType:type    ];
-                    //                    The below tracks our position down down down... Maybe as an option?
-                    //                    if ( [clippingStore jcListCount] > 1 ) stackPosition++;
-                    self.stackPosition = 0;
-                    [self updateMenu];
-                    if ( [[NSUserDefaults standardUserDefaults] integerForKey:@"savePreference"] >= 2 ) {
-                        [self saveEngine];
-                    }
-                }
+            // This is a cheaper test than for #4 on our list, so we'll do it first.
+            if ([[self.jcPasteboard stringForType:@"net.sf.jumpcut.internal"] isEqual:@"1"]) {
+                NSLog(@"SBC internal");
+                return;
             }
-        } else {
-            // NSLog(@"Contents: Non-string");
+            if ([self.clippingStore jcListCount] > 0 && [contents isEqualToString:[self.clippingStore clippingContentsAtPosition:0]]) {
+                return;
+            }
+            // We've made it through our battery of tests.
+            [self.clippingStore addClipping:contents
+                                     ofType:type    ];
+            // The below tracks our position down down down... Maybe as an option?
+            // if ( [clippingStore jcListCount] > 1 ) stackPosition++;
+            self.stackPosition = 0;
+            [self updateMenu];
+            if ( [[NSUserDefaults standardUserDefaults] integerForKey:@"savePreference"] >= 2 ) {
+                [self saveEngine];
+            }
         }
     }
-
 }
 
 /* Misc. UX */
